--- a/foundry.toml
+++ b/foundry.toml
@@ -3,4 +3,15 @@ src = "src"
 out = "out"
 libs = ["lib"]
 
+remappings = [
+    
+    "@chainlink/=lib/chainlink/",
+    "@chainlink-brownie-contracts/=lib/chainlink-brownie-contracts/",
+    "@uniswap/v3-core/=lib/v3-core/",
+    "@uniswap/v3-periphery/=lib/v3-periphery/",
+    "@openzeppelin/contracts/=lib/openzeppelin-contracts/contracts/",
+    "ds-test/=lib/forge-std/lib/ds-test/src/",
+    "forge-std/=lib/forge-std/src/"
+]
+
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
