--- a/web/package.json
+++ b/web/package.json
@@ -70,8 +70,10 @@
     "react-hook-form": "^7.51.2",
     "react-howler": "^5.2.0",
     "react-resizable-panels": "^2.0.16",
+    "react-toastify": "^10.0.5",
     "react-youtube": "^10.1.0",
     "readable-stream": "^4.5.2",
+    "recharts": "^2.12.7",
     "sonner": "^1.4.41",
     "svix": "^1.24.0",
     "tailwind-merge": "^2.2.2",
